0.14/_sources/auto_tutorials/index.rst.txt
:orphan:

Tutorials
=========

Introductory tutorials to MNE.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to Python ====================== ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_python_intro_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_python_intro.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_python_intro

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial gives a short introduction to MNE configurations. ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_configuration_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_configuration.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_configuration

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to artifacts and artifact detection ==============================================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_detection_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_detection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_detection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize Raw data ==================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_visualize_raw_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_visualize_raw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_visualize_raw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize Epochs data =====================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_visualize_epochs_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_visualize_epochs.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_visualize_epochs

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The :class:`Evoked &lt;mne.Evoked&gt;` data structure: evoked/averaged data =========================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_object_evoked_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_object_evoked.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_object_evoked

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Computing covariance matrix =========================== ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_compute_covariance_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_compute_covariance.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_compute_covariance

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial shows how to clean MEG data with Maxwell filtering.">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_maxwell_filtering_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_maxwell_filtering.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_maxwell_filtering

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The :class:`Info &lt;mne.Info&gt;` data structure ============================================== ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_info_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_info.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_info

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="MNE supports working with more than just MEG and EEG data. Here we show some of the functions t...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_ecog_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_ecog.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_ecog

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we compute the evoked from raw for the Brainstorm Elekta phantom tutorial dataset. For com...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_brainstorm_phantom_elekta_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_brainstorm_phantom_elekta.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_brainstorm_phantom_elekta

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Artifact Correction with SSP ============================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_ssp_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_ssp.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_ssp

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Modifying data in-place ======================= ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_modifying_data_inplace_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_modifying_data_inplace.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_modifying_data_inplace

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Filtering and resampling data =============================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_filtering_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_filtering.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_filtering

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Rejecting bad data (channels and segments) ==========================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_rejection_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_rejection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_rejection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Epoching and averaging (ERP/ERF) ================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_epoching_and_averaging_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_epoching_and_averaging.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_epoching_and_averaging

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Decoding, a.k.a MVPA or supervised machine learning applied to MEG data in sensor space. Here t...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_sensors_decoding_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_sensors_decoding.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_sensors_decoding

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Head model and forward computation ==================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_forward_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_forward.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_forward

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The :class:`Raw &lt;mne.io.Raw&gt;` data structure: continuous data =================================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_object_raw_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_object_raw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_object_raw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we compute the evoked from raw for the Brainstorm CTF phantom tutorial dataset. For compar...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_brainstorm_phantom_ctf_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_brainstorm_phantom_ctf.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_brainstorm_phantom_ctf

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The :class:`Epochs &lt;mne.Epochs&gt;` data structure: epoched data =================================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_object_epochs_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_object_epochs.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_object_epochs

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="============================================= Frequency and time-frequency sensors analysis ===...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_sensors_time_frequency_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_sensors_time_frequency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_sensors_time_frequency

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Creating MNE-Python's data structures from scratch ============================================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_creating_data_structures_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_creating_data_structures.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_creating_data_structures

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="===================== Visualize Evoked data ===================== ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_visualize_evoked_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_visualize_evoked.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_visualize_evoked

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This shows how to fit a dipole using mne-python.">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_dipole_fit_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_dipole_fit.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_dipole_fit

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="=============================================================== Non-parametric 1 sample cluster...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_1samp_test_time_frequency_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_1samp_test_time_frequency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_1samp_test_time_frequency

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Compute ICA on MEG data and remove artifacts ============================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_ica_from_raw_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_ica_from_raw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_ica_from_raw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Source localization with MNE/dSPM/sLORETA =========================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_mne_dspm_source_localization_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_mne_dspm_source_localization.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_mne_dspm_source_localization

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="EEG processing and Event Related Potentials (ERPs) ============================================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_eeg_erp_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_eeg_erp.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_eeg_erp

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="========================================================================= 2 samples permutation...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_spatio_temporal_2samp_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_spatio_temporal_2samp.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_spatio_temporal_2samp

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="========================================================================= Non-parametric betwee...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_time_frequency_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_time_frequency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_time_frequency

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Corrupt known signal with point spread ======================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_point_spread_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_point_spread.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_point_spread

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Basic MEG and EEG data processing =================================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_introduction_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_introduction.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_introduction

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Artifact Correction with ICA ============================">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_ica_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_ica.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_ica

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="===================================================== Spatiotemporal permutation F-test on full...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_spatio_temporal_cluster_sensors_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_spatio_temporal_cluster_sensors.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_spatio_temporal_cluster_sensors

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="================================= Export epochs to Pandas DataFrame ===========================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_epochs_to_data_frame_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_epochs_to_data_frame.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_epochs_to_data_frame

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="====================================================== Permutation t-test on toy data with spat...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_methods_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_methods.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_methods

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="================================================================= Permutation t-test on source ...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_spatio_temporal_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_spatio_temporal.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_spatio_temporal

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="==================================================================== Mass-univariate twoway rep...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_time_frequency_repeated_measures_anova_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_time_frequency_repeated_measures_anova.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_time_frequency_repeated_measures_anova

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="====================================================================== Repeated measures ANOVA ...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_spatio_temporal_repeated_measures_anova_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_spatio_temporal_repeated_measures_anova.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_spatio_temporal_repeated_measures_anova

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we compute the evoked from raw for the auditory Brainstorm tutorial dataset. For compariso...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_brainstorm_auditory_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_brainstorm_auditory.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_brainstorm_auditory

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="=================================== Background information on filtering =======================...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_background_filtering_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_background_filtering.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_background_filtering
.. raw:: html

    <div style='clear:both'></div>



.. container:: sphx-glr-footer


  .. container:: sphx-glr-download

    :download:`Download all examples in Python source code: auto_tutorials_python.zip <//home/ubuntu/mne-python/doc/auto_tutorials/auto_tutorials_python.zip>`



  .. container:: sphx-glr-download

    :download:`Download all examples in Jupyter notebooks: auto_tutorials_jupyter.zip <//home/ubuntu/mne-python/doc/auto_tutorials/auto_tutorials_jupyter.zip>`

.. rst-class:: sphx-glr-signature

    `Generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
