0.16/_sources/auto_tutorials/index.rst.txt
:orphan:

Tutorials
=========

Introductory tutorials to MNE.



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="`Python &lt;https://www.python.org/&gt;`_ is a modern general-purpose object-oriented high-level prog...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_python_intro_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_python_intro.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_python_intro

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial gives a short introduction to MNE configurations. ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_configuration_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_configuration.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_configuration

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Since MNE supports the data of many different acquisition systems, the particular artifacts in ...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_detection_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_detection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_detection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The :class:`Evoked &lt;mne.Evoked&gt;` data structure is mainly used for storing averaged data over t...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_object_evoked_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_object_evoked.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_object_evoked

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize Raw data">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_visualize_raw_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_visualize_raw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_visualize_raw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Visualize Epochs data">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_visualize_epochs_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_visualize_epochs.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_visualize_epochs

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial shows how to clean MEG data with Maxwell filtering.">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_maxwell_filtering_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_maxwell_filtering.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_maxwell_filtering

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This tutorial demonstrates how to plot whitened evoked data.">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_whitened_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_whitened.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_whitened

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The :class:`Info &lt;mne.Info&gt;` data object is typically created when data is imported into MNE-Py...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_info_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_info.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_info

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="It is often necessary to modify data once you have loaded it into memory. Common examples of th...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_modifying_data_inplace_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_modifying_data_inplace.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_modifying_data_inplace

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="MNE supports working with more than just MEG and EEG data. Here we show some of the functions t...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_ecog_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_ecog.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_ecog

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Artifact Correction with SSP">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_ssp_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_ssp.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_ssp

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Some artifacts are restricted to certain frequencies and can therefore be fixed by filtering. A...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_filtering_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_filtering.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_filtering

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Many methods in MNE, including source estimation and some classification algorithms, require co...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_compute_covariance_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_compute_covariance.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_compute_covariance

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we read 4DBTi epochs data obtained with a spherical phantom using four different dipole lo...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_phantom_4DBTi_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_phantom_4DBTi.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_phantom_4DBTi

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The aim of this tutorial is to show how to visually assess that the data are well aligned in sp...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_source_alignment_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_source_alignment.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_source_alignment

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Epoching and averaging">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_epoching_and_averaging_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_epoching_and_averaging.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_epoching_and_averaging

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Rejecting bad data">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_rejection_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_rejection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_rejection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Continuous data is stored in objects of type :class:`Raw &lt;mne.io.Raw&gt;`. The core data structure...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_object_raw_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_object_raw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_object_raw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip=":class:`Epochs &lt;mne.Epochs&gt;` objects are a way of representing continuous data as a collection ...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_object_epochs_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_object_epochs.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_object_epochs

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we compute the evoked from raw for the Brainstorm CTF phantom tutorial dataset. For compar...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_brainstorm_phantom_ctf_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_brainstorm_phantom_ctf.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_brainstorm_phantom_ctf

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows example fixed- and free-orientation source localizations produced by MNE, dS...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_mne_solutions_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_mne_solutions.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_mne_solutions

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="MNE provides mechanisms for creating various core objects directly from NumPy arrays. ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_creating_data_structures_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_creating_data_structures.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_creating_data_structures

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The objective is to show you how to explore the spectral content of your data (frequency and ti...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_sensors_time_frequency_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_sensors_time_frequency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_sensors_time_frequency

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The aim of this tutorial is to be a getting started for forward computation.">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_forward_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_forward.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_forward

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This shows how to fit a dipole using mne-python.">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_dipole_fit_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_dipole_fit.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_dipole_fit

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial we focus on the plotting functions of :class:`mne.Evoked`. ">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_visualize_evoked_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_visualize_evoked.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_visualize_evoked

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script shows how to estimate significant clusters in time-frequency power estimates. It us...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_1samp_test_time_frequency_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_1samp_test_time_frequency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_1samp_test_time_frequency

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we compute the evoked from raw for the Brainstorm Elekta phantom tutorial dataset. For com...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_brainstorm_phantom_elekta_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_brainstorm_phantom_elekta.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_brainstorm_phantom_elekta

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="ICA is fit to MEG raw data. The sources matching the ECG and EOG are automatically found and di...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_ica_from_raw_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_ica_from_raw.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_ica_from_raw

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrating pandas-style string querying with Epochs metadata. For related uses of :class:`mn...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_metadata_epochs_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_metadata_epochs.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_metadata_epochs

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script shows how to compare clusters in time-frequency power estimates between conditions....">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_time_frequency_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_time_frequency.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_time_frequency

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Tests if the source space data are significantly different between 2 groups of subjects (simula...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_spatio_temporal_2samp_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_spatio_temporal_2samp.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_spatio_temporal_2samp

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="For a generic introduction to the computation of ERP and ERF see :ref:`tut_epoching_and_averagi...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_eeg_erp_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_eeg_erp.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_eeg_erp

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The aim of this tutorial is to demonstrate how to put a known signal at a desired location(s) i...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_point_spread_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_point_spread.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_point_spread

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="MNE-Python provides a range of tools for statistical hypothesis testing and the visualisation o...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_erp_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_erp.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_erp

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Decoding, a.k.a MVPA or supervised machine learning, is applied to MEG data in sensor space. He...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_sensors_decoding_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_sensors_decoding.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_sensors_decoding

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The aim of this tutorial is to teach you how to compute and apply a linear inverse method such ...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_mne_dspm_source_localization_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_mne_dspm_source_localization.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_mne_dspm_source_localization

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="MNE-Python reimplements most of MNE-C&#x27;s (the original MNE command line utils) functionality and...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_introduction_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_introduction.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_introduction

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="When performing source localization in a distributed manner (MNE/dSPM/sLORETA/eLORETA), the sou...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_dipole_orientations_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_dipole_orientations.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_dipole_orientations

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="ICA finds directions in the feature space corresponding to projections with high non-Gaussianit...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_artifacts_correction_ica_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_artifacts_correction_ica.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_artifacts_correction_ica

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Tests for differential evoked responses in at least one condition using a permutation clusterin...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_spatio_temporal_cluster_sensors_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_spatio_temporal_cluster_sensors.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_spatio_temporal_cluster_sensors

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example the pandas exporter will be used to produce a DataFrame object. After exploring...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_epochs_to_data_frame_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_epochs_to_data_frame.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_epochs_to_data_frame

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Tests if the evoked response is significantly different between conditions across subjects (sim...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_spatio_temporal_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_spatio_temporal.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_spatio_temporal

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This script shows how to conduct a mass-univariate repeated measures ANOVA. As the model to be ...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_time_frequency_repeated_measures_anova_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_time_frequency_repeated_measures_anova.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_time_frequency_repeated_measures_anova

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example illustrates how to make use of the clustering functions for arbitrary, self-define...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_stats_cluster_spatio_temporal_repeated_measures_anova_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_stats_cluster_spatio_temporal_repeated_measures_anova.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_stats_cluster_spatio_temporal_repeated_measures_anova

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we will briefly cover multiple concepts of inferential statistics in an introductory manne...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_background_statistics_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_background_statistics.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_background_statistics

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we compute the evoked from raw for the auditory Brainstorm tutorial dataset. For compariso...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_brainstorm_auditory_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_brainstorm_auditory.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_brainstorm_auditory

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this tutorial, we&#x27;re going to simulate two signals originating from two locations on the cor...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_dics_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_dics.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_dics

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This demonstrates how an encoding model can be fit with multiple continuous inputs. In this cas...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_receptive_field_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_receptive_field.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_receptive_field

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we give some background information on filtering in general, and how it is done in MNE-Pyt...">

.. only:: html

    .. figure:: /auto_tutorials/images/thumb/sphx_glr_plot_background_filtering_thumb.png

        :ref:`sphx_glr_auto_tutorials_plot_background_filtering.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /auto_tutorials/plot_background_filtering
.. raw:: html

    <div style='clear:both'></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download

    :download:`Download all examples in Python source code: auto_tutorials_python.zip <//home/circleci/project/doc/auto_tutorials/auto_tutorials_python.zip>`



  .. container:: sphx-glr-download

    :download:`Download all examples in Jupyter notebooks: auto_tutorials_jupyter.zip <//home/circleci/project/doc/auto_tutorials/auto_tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.readthedocs.io>`_
